--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-syntax-highlighter": "^15.5.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
